# HLSDownloader

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  pyproject.toml  setup.py
hls_downloader.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/: example.py
src/: hls_downloader.cpp
